# cs224r-wire-untangling

./: .gitignore  CLAUDE.md  README.md  environment.yml  modal_train.py  pyproject.toml  requirements.txt
configs/: stick_reorder.yaml
docs/: expert_policy.md
scripts/: collect_demos.py  eval.py  play_env.py  train.py
tests/: test_stick_reorder.py
wire_untangling/: __init__.py
wire_untangling/envs/: __init__.py  stick_reorder.py
wire_untangling/models/: __init__.py
wire_untangling/models/objects/: __init__.py  stick_object.py
wire_untangling/policies/: __init__.py  pick_place_expert.py
wire_untangling/utils/: eval.py
