[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wire-untangling"
version = "0.1.0"
description = "CS224R: deep RL for robot wire untangling"
requires-python = ">=3.9"
dependencies = [
    "robosuite>=1.4.0",
    "mujoco>=3.0.0",
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "h5py",
]

[project.optional-dependencies]
train = [
    "torch>=2.0.0",
    "stable-baselines3>=2.0.0",
    "wandb",
    "tensorboard",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "modal>=0.73",
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["wire_untangling*"]
